[project]
name = "lldatest"
version = "0.1.1"
authors = [
  { name="Harry T. Ma", email="harrymaofshs@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HarryTMa/lldatest"
"Bug Tracker" = "https://github.com/HarryTMa/lldatest/issues"

